# stock_ml

./: .gitignore  pyproject.toml  run_all.sh  run_api.sh
app/: auth.py  features.py  main.py  models.py  schemas.py
app/model/: make_model.py  make_preprocessing.py  run_model.py
app/routers/: predict.py
model/: make_model.py  make_preprocessing.py  run_all.sh  run_model.py
