[project]
name = "pycharmmiscproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "pandas>=2.3.1",
    "pandas-ta>=0.3.14b0",
    "pydantic>=2.11.7",
    "pykrx>=1.0.51",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xgboost>=2.1.4",
    "yfinance>=0.2.65",
]
